[gd_scene load_steps=3 format=3 uid="uid://c8vakdwkgqvxi"]

[ext_resource type="Script" uid="uid://dwnwgok17gp1u" path="res://windows/EditListBooksWindow/EditListBooksWindow.gd" id="1_ifi7u"]
[ext_resource type="PackedScene" uid="uid://cww7m0lkfi13d" path="res://windows/tagsWindow/TagsWindow.tscn" id="2_lcowc"]

[node name="EditListBooksWindow" type="Window"]
oversampling_override = 1.0
title = "Livros da lista"
initial_position = 2
size = Vector2i(800, 600)
exclusive = true
force_native = true
script = ExtResource("1_ifi7u")

[node name="TagsWindow" parent="." instance=ExtResource("2_lcowc")]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ListTitleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BackgroundColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/ListTitleContainer"]
layout_mode = 2
color = Color(0.5, 0.5, 0.5, 1)

[node name="ListNameRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/ListTitleContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="BookMenuContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/BookMenuContainer"]
layout_mode = 2
alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/normal_font_size = 20
text = "Livros:"
fit_content = true
autowrap_mode = 0

[node name="Sort" type="FlowContainer" parent="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer"]
layout_mode = 2
alignment = 1
vertical = true

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer/Sort"]
layout_mode = 2
text = "Organizar:"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="SortOption" type="OptionButton" parent="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer/Sort"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text_overrun_behavior = 3
selected = 0
fit_to_longest_item = false
item_count = 4
popup/item_0/text = "Mais recente"
popup/item_0/id = 0
popup/item_1/text = "Mais antigo"
popup/item_1/id = 3
popup/item_2/text = "Alfabética (Crescente)"
popup/item_2/id = 2
popup/item_3/text = "Alfabética (Decrescente)"
popup/item_3/id = 3

[node name="FilterButton" type="Button" parent="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Filtrar"

[node name="SearchContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Pesquisar"
keep_editing_on_text_submit = true
clear_button_enabled = true

[node name="BooksFlowContainer" type="FlowContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 8

[node name="ReadyButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 2
text = "Pronto"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer/Sort/SortOption" to="." method="_on_sort_option_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BookMenuContainer/HBoxContainer/FilterButton" to="." method="_on_filter_button_pressed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/SearchContainer/SearchLineEdit" to="." method="_on_search_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ReadyButton" to="." method="_on_ready_button_pressed"]
